update welcome h1 for tablet/laptop/desktop screen sizes to fix h1 overflowing container

--- a/public/style.css
+++ b/public/style.css
@@ -28,7 +28,7 @@ body {
 
 .welcome-div-2 {
   grid-column: span 3;
-  grid-row: 8 / span 3;
+  grid-row: 7 / span 4;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,7 +39,7 @@ body {
 
 .welcome-div-2 h1 {
   font-size: 7rem;
-  padding-top: 1rem;
+  padding-top: 1.5rem;
   margin-bottom: 0.2rem;
 }
 
@@ -445,7 +445,7 @@ body {
 
 @media only screen and (width >= 768px) and (width < 991px) {
   .welcome-div-2 h1 {
-    font-size: 6rem;
+    font-size: 5.2rem;
   }
 
   .random-selected-fighter {
